solc_mutator_ossfuzz_seed_corpus/test_sol/test_2e32ec090f2ddd84873787c136865ba91576e8ef4520c2f2a6cdfb01498ba166_992607dfb5e53921fe18918dfa80a6268de4f838_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bool i0,bool i1,int208 i2)  returns(bytes22 o0,uint96 o1)
{ }
function f1(bool i0,bool i1)  returns(bool o0)
{




  {

i1 = (~((((103089528816172340204611081826562788736370932555130635923567 + -426836465177059176075467574433591156848242176557124728722352) / 708156625106819083605437077658159053220865168470998856600542) | 547258605712123243288599093559706816252441575722543020566573)) < 755695960241466567155480112583007254516584396363371484747964);


  }
  i1 = false;

}
// ----
// TypeError 2271: (su0.sol:145-399): Operator | not compatible with types rational_const -323...(53 digits omitted)...8785 / 7081...(52 digits omitted)...0542 and int_const 5472...(52 digits omitted)...6573
// TypeError 4907: (su0.sol:142-401): Unary operator ~ cannot be applied to type rational_const -323...(53 digits omitted)...8785 / 7081...(52 digits omitted)...0542
// TypeError 2271: (su0.sol:142-464): Operator < not compatible with types rational_const -323...(53 digits omitted)...8785 / 7081...(52 digits omitted)...0542 and int_const 7556...(52 digits omitted)...7964
